--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "fruits-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "jest --passWithNoTests --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "joi": "^17.7.0"
